Improve performance - increase audio sample buffer, tidy up BufferedImage swap, add JVM options to sbt